Fix text alignment

--- a/index.css
+++ b/index.css
@@ -153,4 +153,5 @@ header .container {
 
 .finished {
   padding: 1em;
+  text-align: center;
 }
